--- a/resources/views/Customer/Components/CountrySelect.twig
+++ b/resources/views/Customer/Components/CountrySelect.twig
@@ -13,7 +13,7 @@
             <div
                 class="input-unit"
                 v-if="stateList && stateList.length > 0 && addressType === '1'"
-                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'billing_address.stateId'), validateType: ''}"
+                v-validate="isInRequiredFields('de', 'billing_address.stateId')"
                 data-model="stateId">
                 <select :value="selectedStateId" class="custom-select" @change="stateChanged($event.target.value)">
                     <option :selected="selectedStateId === null">{{ trans("Ceres::Template.addressPleaseSelect") }}</option>
@@ -31,7 +31,7 @@
             <div
                 class="input-unit"
                 v-if="stateList && stateList.length > 0 && addressType === '2'"
-                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.stateId'), validateType: ''}"
+                v-validate="isInRequiredFields('de', 'delivery_address.stateId')"
                 data-model="stateId">
                 <select :value="selectedStateId" class="custom-select" @change="stateChanged($event.target.value)">
                     <option :selected="selectedStateId === null">{{ trans("Ceres::Template.addressPleaseSelect") }}</option>
