--- a/resources/views/Widgets/MyAccount/BankDetailsWidget.twig
+++ b/resources/views/Widgets/MyAccount/BankDetailsWidget.twig
@@ -1,10 +1,5 @@
-{
-    "identifier": "Ceres::BankDetailsWidget",
-    "label": "Template.myAccountBankDetails",
-    "previewImageURL": "/images/widgets/bankDetails.svg",
-    "type": "myaccount",
-    "categories": ["myaccount"],
-    "position": 100,
-    "widgetClass": "Ceres\\Widgets\\MyAccount\\BankDetailsWidget",
-    "settings": {}
-}
+{% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
+
+<div>
+    <p>Dies ist ein TestWidget</p>
+</div>
