--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
@@ -32,7 +32,7 @@
             <div
                 class="input-unit"
                 data-model="vatNumber"
-                v-validate.text="isInRequiredFields('de', 'billing_address.vatNumber')">
+                v-validate:text="isInRequiredFields('de', 'billing_address.vatNumber')">
                 <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber"  @input="emitInputEvent('vatNumber', $event.target.value)" data-autofocus>
                 <label :for="'txtVatNumber' + _uid">
                     ${ '{{ trans("Ceres::Template.addressVatNumber") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.vatNumber')) }
@@ -48,7 +48,7 @@
             <div
                 class="input-unit"
                 data-model="title"
-                v-validate.text="isInRequiredFields('de', 'billing_address.title')">
+                v-validate="isInRequiredFields('de', 'billing_address.title')">
                 <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title"  @input="emitInputEvent('title', $event.target.value)" data-autofocus>
                 <label :for="'txtTitle' + _uid">
                     ${ '{{ trans("Ceres::Template.addressTitle") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.title')) }
@@ -84,7 +84,7 @@
             <div
                 class="input-unit"
                 data-model="name4"
-                v-validate.text="isInRequiredFields('de', 'billing_address.name4')">
+                v-validate:text="isInRequiredFields('de', 'billing_address.name4')">
                 <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
                 <label :for="'txtAdditionalName' + _uid">
                     ${ '{{ trans("Ceres::Template.addressAdditionalName") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.name4')) }
@@ -96,7 +96,7 @@
             <div
                 class="input-unit"
                 data-model="birthday"
-                v-validate.date="isInRequiredFields('de', 'billing_address.birthday')">
+                v-validate:date="isInRequiredFields('de', 'billing_address.birthday')">
                 <input type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
                 <label :for="'txtBirthdate' + _uid">
                     ${ '{{ trans("Ceres::Template.addressBirthdate") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.birthday')) }
@@ -108,7 +108,7 @@
             <div
                 class="input-unit"
                 data-model="telephone"
-                v-validate.text="isInRequiredFields('de', 'billing_address.phoneNumber')">
+                v-validate:text="isInRequiredFields('de', 'billing_address.phoneNumber')">
                 <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
                 <label :for="'txtTelephone' + _uid">
                     ${ '{{ trans("Ceres::Template.addressTelephone") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.phoneNumber')) }
@@ -142,7 +142,7 @@
             <div
                 class="input-unit"
                 data-model="address3"
-                v-validate.text="isInRequiredFields('de', 'billing_address.address3')">
+                v-validate:text="isInRequiredFields('de', 'billing_address.address3')">
                 <input type="text" name="decorateAddress" :id="'decorateAddress0' + _uid" :value="value.address3" @input="emitInputEvent('address3', $event.target.value)">
                 <label :for="'decorateAddress0' + _uid">
                     ${ '{{ trans("Ceres::Template.addressAdditionalAddress1") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.address3')) }
@@ -154,7 +154,7 @@
             <div
                 class="input-unit"
                 data-model="address4"
-                v-validate.text="isInRequiredFields('de', 'billing_address.address4')">
+                v-validate:text="isInRequiredFields('de', 'billing_address.address4')">
                 <input type="text" name="decorateAddress" :id="'decorateAddress1' + _uid" :value="value.address4" @input="emitInputEvent('address4', $event.target.value)">
                 <label :for="'decorateAddress1' + _uid">
                     ${ '{{ trans("Ceres::Template.addressAdditionalAddress2") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.address4')) }
