--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
@@ -30,7 +30,7 @@
             <div
                 class="input-unit"
                 data-model="vatNumber"
-                v-validate.text="isInRequiredFields('gb', 'billing_address.vatNumber')">
+                v-validate:text="isInRequiredFields('gb', 'billing_address.vatNumber')">
                 <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber" @input="emitInputEvent('vatNumber', $event.target.value)" data-autofocus>
                 <label :for="'txtVatNumber' + _uid">{{ trans("Ceres::Template.addressVatNumber") }}{% if "billing_address.vatNumber" in addressFieldsRequired %}*{% endif %}</label>
             </div>
@@ -45,7 +45,7 @@
             <div
                 class="input-unit"
                 data-model="title"
-                v-validate.text="isInRequiredFields('gb', 'billing_address.title')">
+                v-validate:text="isInRequiredFields('gb', 'billing_address.title')">
                 <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title" @input="emitInputEvent('title', $event.target.value)" data-autofocus>
                 <label :for="'txtTitle' + _uid">{{ trans("Ceres::Template.addressTitle") }}{% if "billing_address.title" in addressFieldsRequired %}*{% endif %}</label>
             </div>
@@ -80,7 +80,7 @@
             <div
                 class="input-unit"
                 data-model="name4"
-                v-validate.text="isInRequiredFields('gb', 'billing_address.name4')">
+                v-validate:text="isInRequiredFields('gb', 'billing_address.name4')">
                 <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
                 <label :for="'txtAdditionalName' + _uid">
                     ${ '{{ trans("Ceres::Template.addressGBNameAffix") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.name4')) }
@@ -92,7 +92,7 @@
             <div
                 class="input-unit"
                 data-model="birthday"
-                v-validate.date="isInRequiredFields('gb', 'billing_address.birthday')">
+                v-validate:date="isInRequiredFields('gb', 'billing_address.birthday')">
                 <input type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
                 <label :for="'txtBirthdate' + _uid">{{ trans("Ceres::Template.addressBirthdate") }}{% if "billing_address.birthday" in addressFieldsRequired %}*{% endif %}</label>
             </div>
@@ -102,7 +102,7 @@
             <div
                 class="input-unit"
                 data-model="telephone"
-                v-validate.text="isInRequiredFields('gb', 'billing_address.phoneNumber')">
+                v-validate:text="isInRequiredFields('gb', 'billing_address.phoneNumber')">
                 <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
                 <label :for="'txtTelephone' + _uid">
                     ${ '{{ trans("Ceres::Template.addressTelephone") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.phoneNumber')) }
@@ -138,7 +138,7 @@
             <div
                 class="input-unit"
                 data-model="address3"
-                v-validate.text="isInRequiredFields('gb', 'billing_address.address3')">
+                v-validate:text="isInRequiredFields('gb', 'billing_address.address3')">
                 <input type="text" name="buildingName" :id="'decorateAddress0' + _uid" :value="value.address3"  @input="emitInputEvent('address3', $event.target.value)">
                 <label :for="'decorateAddress0' + _uid">
                     ${ '{{ trans("Ceres::Template.addressENAddressLine3") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.address3')) }
@@ -150,7 +150,7 @@
             <div
                 class="input-unit"
                 data-model="address4"
-                v-validate.text="isInRequiredFields('gb', 'billing_address.address4')">
+                v-validate:text="isInRequiredFields('gb', 'billing_address.address4')">
                 <input type="text" name="buildingName" :id="'decorateAddress0' + _uid" :value="value.address4"  @input="emitInputEvent('address4', $event.target.value)">
                 <label :for="'decorateAddress0' + _uid">
                     ${ '{{ trans("Ceres::Template.addressENAddressLine4") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.address4')) }
