--- a/resources/views/Widgets/Customer/AddressWidget.twig
+++ b/resources/views/Widgets/Customer/AddressWidget.twig
@@ -8,7 +8,11 @@
         {{ Twig.set("overrideBillingAddress", Twig.call("LayoutContainer.show", ["Ceres::Checkout.BillingAddress"])) }}
         {{ Twig.if("overrideBillingAddress | trim is empty") }}
             <h3 class="mb-3">{{ Twig.trans("Ceres::Template.checkoutInvoiceAddress") }}</h3>
-            
+
+            {% if widget.settings.hintText.mobile is not empty %}
+                <p>{{ widget.settings.hintText.mobile | raw }}</p>
+            {% endif %}
+
             {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.BeforeBillingAddress"])) }}
             <div class="invoice-addresses-select">
                 {% set optionalInvoiceAddressFields = {
@@ -33,6 +37,10 @@
         {{ Twig.set("overrideShippingAddress", Twig.call("LayoutContainer.show", ["Ceres::Checkout.ShippingAddress"])) }}
         {{ Twig.if("overrideShippingAddress | trim is empty") }}
             <h3 class="mb-3">{{ Twig.trans("Ceres::Template.checkoutShippingAddress") }}</h3>
+
+            {% if hintText is not empty %}
+                <p>{{ hintText | raw }}</p>
+            {% endif %}
 
             {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.BeforeShippingAddress"])) }}
             <div class="shipping-addresses-select">
