--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -15415,7 +15415,7 @@ body.menu-is-visible {
 }
 
 #mainNavbarCollapsable ul.mainmenu li ul {
-  background: #008ebd;
+  background: #000000;
   left: 0;
   list-style: none;
   margin: 0;
