--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -464,7 +464,7 @@ $zindex-modal-bg:          $zIndex-7 !default;
 $zindex-modal:             $zIndex-8 !default;
 
 // Navbar
-$navbar-background-color:           #000000;
+$navbar-background-color:           #000000 !important;
 $navbar-border-radius:              0 !default;
 $navbar-padding-x:                  $spacer !default;
 $navbar-padding-y:                  ($spacer / 2) !default;
