--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -13644,7 +13644,7 @@ body.menu-is-visible {
 #mainNavbarCollapsable {
 	background 	: $menu-bg-sm;
 	bottom 		: 0;
-	color 		: $menu-color-sm;
+	color 		: #ffffff;
 	font-size 	: $menu-font-s-sm;
 	left 		: 0;
 	opacity 	: .6;
