--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -13793,7 +13793,7 @@ body.menu-is-visible {
 
 		.breadcrumb { display : none!important; }
 		ul.mainmenu {
-			color : $menu-color-lg;
+			color : #e9e9e9;
 			text-align: right;
 			.open>ul { display : none!important; }
 			>li {
