--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -10695,7 +10695,7 @@ body {
 	> #vue-app,
 	> #vue-error {
 
-		background-color: $gray-lightest;
+		background-color: #000000 !important;
 		
 		&>.wrapper-top, &>.wrapper-left, &>.wrapper-right, &>.wrapper-bottom {
 			position 	: absolute;
