--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -1,17 +1,8 @@
-<header id="page-header" class="top-bar pos-f-t">
+
+<header id="page-header" class="top-bar fixed-top">
     <div>
-    
-       <div class="row">
-         
-        </div>
         <div class="container-max">
-       
-      
-        
-            <div class="row" >
-            
-            
-            
+            <div class="row">
                 {{ LayoutContainer.show("Ceres::Header.LeftSide") }}
 
                 <ul id="controlsList" class="controls-list list-inline">
