--- a/resources/views/Widgets/Checkout/ContactWishWidget.twig
+++ b/resources/views/Widgets/Checkout/ContactWishWidget.twig
@@ -1,12 +1,12 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
 {{ Twig.component("Ceres::Checkout.Components.ContactWishInput") }}
-{% set hinttext = widget.settings.hinttext.mobile %}
+{% set hintText = widget.settings.hintText.mobile %}
 
 <div class="widget widget-contact-wish">
     <h3>{{ Twig.trans("Ceres::Template.checkoutContactWish") }}</h3>
-    {% if hinttext is not empty %}
-        <p>{{ hinttext | raw }}</p>
+    {% if hintText is not empty %}
+        <p>{{ hintText | raw }}</p>
     {% endif %}
     
     <contact-wish-input class="pb-3" template="#vue-contact-wish-input"></contact-wish-input>
