--- a/resources/views/Checkout/Components/AcceptGtcCheck.twig
+++ b/resources/views/Checkout/Components/AcceptGtcCheck.twig
@@ -22,11 +22,11 @@
             -->{% endset %}
 
                 {{ trans("Ceres::Template.checkoutChooseOur", {"gtc": gtcContent, "cancellation": cancellationContent, "policy": policyContent}) }}<!--
-                --><template v-if="isRequired">*</template>
+                --><template v-if="isRequired"><sup>*</sup></template>
             {% endautoescape %}
         </label>
         <label v-else class="form-check-label" :for="'gtc-accept' + _uid">
-            ${ customText }<template v-if="isRequired">*</template>
+            ${ customText | raw }<template v-if="isRequired"><sup>*</sup></template>
         </label>
     </div>
 </script>
