--- a/resources/views/Widgets/WidgetComponents.twig
+++ b/resources/views/Widgets/WidgetComponents.twig
@@ -1,4 +1,4 @@
-{{ component("Ceres::Customer.Components.AddressSelect.AddressSelect") }}
+{{ component("Ceres::MyAccount.Components.OrderReturnHistory") }}
 {{ component("Ceres::Basket.Components.BasketList") }}
 {{ component("Ceres::Basket.Components.Coupon") }}
 {{ component("Ceres::Checkout.Components.AcceptGtcCheck") }}
@@ -9,5 +9,6 @@
 {{ component("Ceres::Checkout.Components.ShippingProfileSelect") }}
 {{ component("Ceres::Checkout.Components.SubscribeNewsletterCheck") }}
 {{ component("Ceres::Containers.Components.LastSeenItemList") }}
+{{ component("Ceres::Customer.Components.AddressSelect.AddressSelect") }}
 {{ component("Ceres::LiveShopping.Components.LiveShoppingItem") }}
 {{ component("Ceres::Newsletter.Components.NewsletterInput") }}
